--- a/portfolio.css
+++ b/portfolio.css
@@ -84,6 +84,9 @@ body::-webkit-scrollbar-thumb {
     border-radius: 2rem;
     transform: rotate(-40deg);
 }
+a {
+    text-decoration: none;
+}
 
 .navbar {
     position: fixed;
